💎👨‍❤️‍👨 Checkpoint ./public/index.html:9043897/2740 ./public/index.css:9043897/1269 ./public/index.js:9043897/664 ./public/manifest.json:9043897/362 ./public/join/index.html:9043897/1991 ./public/join/join.css:9043897/381 ./public/join/join.js:9043897/640 ./public/host/host.css:9043897/792 ./public/host/host.js:9043897/1860 ./public/host/index.html:9043897/2958 ./index.js:9043897/1739

--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="utf-8" />
     <title>Start Group</title>
 
-    <meta name="viewport"
-        content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta
+      name="viewport"
+      content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
     <meta name="format-detection" content="telephone=no" />
     <meta name="msapplication-tap-highlight" content="no" />
 
@@ -16,32 +17,36 @@
 
     <!-- Link -->
     <script src="/socket.io/socket.io.js"></script>
-    <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" type="text/css" href="index.css" />
 
     <!-- Basic Styling -->
-    <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.1/build/pure-min.css">
-    <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.1/build/base-min.css">
-</head>
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/purecss@1.0.1/build/pure-min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/purecss@1.0.1/build/base-min.css"
+    />
+  </head>
 
-<body>
+  <body>
     <div class="bg"></div>
 
     <a href="host/">
-        <button class="pure-button pure-button-primary">Create Group
-        </button>
+      <button class="pure-button pure-button-primary">Create Group</button>
     </a>
 
     <a href="join/">
-        <button class="pure-button pure-button-primary" id="button-secondary">Join Group
-        </button>
+      <button class="pure-button pure-button-primary" id="button-secondary">
+        Join Group
+      </button>
     </a>
 
-    <button class="pure-button pure-button-primary" id="button-cancel">Reset
+    <button class="pure-button pure-button-primary" id="button-cancel">
+      Reset
     </button>
 
-    </div>
-
-<script src="index.js"></script>
-</body>
-
+    <script src="index.js"></script>
+  </body>
 </html>
