--- a/public/host/index.html
+++ b/public/host/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="utf-8" />
     <title>Start Group</title>
 
-    <meta name="viewport"
-        content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta
+      name="viewport"
+      content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
     <meta name="format-detection" content="telephone=no" />
     <meta name="msapplication-tap-highlight" content="no" />
 
@@ -15,27 +16,44 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 
     <!-- Link -->
-    <link rel="stylesheet" type="text/css" href="host.css">
+    <link rel="stylesheet" type="text/css" href="host.css" />
 
     <!-- Socket io -->
     <script src="/socket.io/socket.io.js"></script>
 
     <!-- Basic Styling -->
-    <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.1/build/pure-min.css">
-    <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.1/build/base-min.css">
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/purecss@1.0.1/build/pure-min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/purecss@1.0.1/build/base-min.css"
+    />
 
     <!-- Sweet Alert -->
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-</head>
+  </head>
 
-<body>
+  <body>
     <a href="../index.html" class="a"></a>
     <div class="pure-form div">
-        <input class="input" inputmode="url" placeholder="Youtube song URL" type="url" id="url">
-        <button onclick="play()" class="pure-button pure-button-primary button" id="start">Start</button>
+      <input
+        class="input"
+        inputmode="url"
+        placeholder="Youtube song URL"
+        type="url"
+        id="url"
+      />
+      <button
+        onclick="play()"
+        class="pure-button pure-button-primary button"
+        id="start"
+      >
+        Start
+      </button>
     </div>
-<div id="container"></div>
-<script src="host.js"></script>
-</body>
-
+    <div id="container"></div>
+    <script src="host.js"></script>
+  </body>
 </html>
