--- a/public/join/index.html
+++ b/public/join/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="utf-8" />
     <title>Join Group</title>
 
-    <meta name="viewport"
-        content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta
+      name="viewport"
+      content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
     <meta name="format-detection" content="telephone=no" />
     <meta name="msapplication-tap-highlight" content="no" />
 
@@ -15,20 +16,19 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 
     <!-- Link -->
-    <link rel="stylesheet" type="text/css" href="join.css">
+    <link rel="stylesheet" type="text/css" href="join.css" />
 
     <!-- Socket io -->
     <script src="/socket.io/socket.io.js"></script>
 
     <!-- Sweet Alert -->
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-</head>
+  </head>
 
-<body>
+  <body>
     Connecting...
     <button>CLICK TO ENSURE CONNECTION</button>
     <div id="container"></div>
     <script src="join.js"></script>
-</body>
-
+  </body>
 </html>
