(Somewhat) Re-write the application

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Start Group</title>
+    <title>Irritator</title>
 
     <meta
       name="viewport"
@@ -42,11 +42,6 @@
         Join Group
       </button>
     </a>
-
-    <button class="pure-button pure-button-primary" id="button-cancel">
-      Reset
-    </button>
-
     <script src="index.js"></script>
   </body>
 </html>
