--- a/public/join/index.html
+++ b/public/join/index.html
@@ -1,34 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Join Group</title>
+<head>
+    <meta charset="utf-8"/>
+    <title>Irritator: Join Group</title>
 
-    <meta
-      name="viewport"
-      content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
-    />
-    <meta name="format-detection" content="telephone=no" />
-    <meta name="msapplication-tap-highlight" content="no" />
+    <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+    <meta name="format-detection" content="telephone=no"/>
+    <meta name="msapplication-tap-highlight" content="no"/>
 
     <!-- add to home screen for ios -->
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="apple-mobile-web-app-capable" content="yes"/>
+    <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
 
     <!-- Link -->
-    <link rel="stylesheet" type="text/css" href="join.css" />
+    <link rel="stylesheet" type="text/css" href="join.css"/>
 
     <!-- Socket io -->
     <script src="/socket.io/socket.io.js"></script>
 
+    <!-- Basic Styling -->
+    <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.1/build/pure-min.css"/>
+    <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.1/build/base-min.css"/>
+
     <!-- Sweet Alert -->
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-  </head>
+</head>
 
-  <body>
-    Connecting...
-    <button>CLICK TO ENSURE CONNECTION</button>
-    <div id="container"></div>
-    <script src="join.js"></script>
-  </body>
+<body>
+<div class="wrapper" id="wrapper">
+    <div class="pure-form wrapper">
+        <input inputmode="numeric" placeholder="Host ID" type="number" id="id"/>
+        <button class="pure-button pure-button-primary button" id="join">Join</button>
+    </div>
+</div>
+<div id="container"></div>
+<script src="join.js"></script>
+</body>
 </html>
